--- a/DataCapture/DataCapture.csproj
+++ b/DataCapture/DataCapture.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.6" />
       <PackageReference Include="AWSSDK.S3" Version="3.7.104.7" />
+      <PackageReference Include="AWSSDK.SQS" Version="3.7.100.122" />
     </ItemGroup>
 
 </Project>
