Add reading messages from SQS and writing it to the file

--- a/MainProcessing/MainProcessing.csproj
+++ b/MainProcessing/MainProcessing.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.6" />
+        <PackageReference Include="AWSSDK.SQS" Version="3.7.100.122" />
+    </ItemGroup>
 </Project>
